--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,13 @@
 /* Google fonts */
 
 @import url('https://fonts.googleapis.com/css2?family=Source+Sans+3:ital,wght@0,400;0,500;0,800;1,200;1,300;1,600&display=swap');
+
+
+/* base styling */
+
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  font-family: 'Source Sans 3', sans-serif;
+}
