--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -178,3 +178,70 @@
 .nav__active {
   color: #f9a826;
 }
+
+
+/*Responsive => max-width 768px */
+
+@media only screen and (max-width: 768px) {
+  .header__top,
+  .header__middle
+  /* .nav__right */
+   {
+    display: none;
+  }
+
+  .mobile__menu {
+    display: block;
+    transition: 0.4s;
+  }
+
+  .navigation {
+    background: rgb(0, 13, 107, 0.6);
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 9999;
+    display: none;
+  }
+
+  .menu {
+    width: 200px; 
+    height: 50%; 
+    background: #000d6b;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0.4rem; 
+    border-radius:0px 10px 10px 0px; 
+    position: fixed; 
+    top: 0;
+    left: 0;
+    z-index: 1; 
+    transition: width 0.3s; 
+}
+
+/* Add styles for the menu items */
+.menu-item {
+    margin: 1rem 0;
+    color: #000d6b; 
+    text-align: center;
+    text-decoration: none;
+    font-size: 18px;
+}
+
+/* Define styles for hover effect on menu items */
+.menu-item:hover {
+    background: #f9a826;
+    border-radius: 5px;
+    transition: background 0.2s;
+}
+
+
+  .menu__active {
+    display: block;
+  }
+}
