--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -19,3 +19,22 @@
     margin-top: 15px;
     line-height: 30px;
   }
+
+
+  /* quick links */
+
+  .quick__link {
+    border: none !important;
+    background: transparent !important;
+  }
+  
+  .quick__link a {
+    color: rgba(255, 255, 255, 0.715);
+    text-decoration: none;
+    font-weight: 300;
+    transition: 0.3s;
+  }
+  
+  .quick__link a:hover {
+    color: #f9a826;
+  }
