styled newsletter section and other part

--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -38,3 +38,40 @@
   .quick__link a:hover {
     color: #f9a826;
   }
+
+  /* footer newsletter */
+
+  .footer__link-title {
+    color: #fff;
+  }
+  
+  .office__info {
+    color: rgba(255, 255, 255, 0.715);
+    font-weight: 300;
+  }
+  
+  .newsletter {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    padding: 8px 12px;
+    border: 1px solid #7c8a972f;
+    border-radius: 50px;
+    background: #020a4de9;
+  }
+  
+  .newsletter input {
+    background: transparent;
+    color: #fff;
+    border: none;
+    outline: none;
+  }
+  
+  .newsletter span i {
+    color: #fff;
+  }
+  
+  .footer__bottom {
+    border-top: 1px solid #7c8a972f;
+  }
+  
