--- a/src/styles/hero-slider.css
+++ b/src/styles/hero-slider.css
@@ -30,3 +30,64 @@
     background-repeat: no-repeat;
     background-size: cover;
   }
+
+
+  .hero__slider {
+    overflow: hidden;
+  }
+  
+  .slider__content {
+    padding-top: 150px;
+  }
+  
+  .slider__content h1 {
+    font-size: 3.2rem;
+    font-weight: 600;
+  }
+  
+  .reserve__btn {
+    background: #fff !important;
+    color: #000d6b !important;
+    border: none;
+    outline: none;
+  }
+  
+  .reserve__btn a {
+    text-decoration: none;
+    font-weight: 600;
+    color: #000d6b;
+  }
+  
+  .reserve__btn:hover {
+    background: #000d6b;
+    color: #fff;
+  }
+  
+
+
+  /* responsive section */
+
+  @media only screen and (max-width: 992px) {
+    .slider__item {
+      height: 530px;
+      max-width: 100vw;
+    }
+  
+    .slider__content {
+      margin-top: -50px;
+    }
+  
+    .slider__content h1 {
+      font-size: 2rem;
+    }
+  }
+  
+  @media only screen and (max-width: 768px) {
+    .slider__item {
+      height: 450px;
+    }
+  
+    .slider__content h1 {
+      font-size: 1.5rem;
+    }
+  }
