added hero-slider styling

--- a/src/styles/hero-slider.css
+++ b/src/styles/hero-slider.css
@@ -58,11 +58,12 @@
     color: #000d6b;
   }
   
-  .reserve__btn:hover {
+  .reserve__btn a:hover {
     background: #000d6b;
     color: #fff;
   }
   
+
 
 
   /* responsive section */
