--- a/src/styles/find-car-form.css
+++ b/src/styles/find-car-form.css
@@ -112,3 +112,18 @@
     }
   }
 
+
+  /* max-width = 768px */
+
+  @media only screen and (max-width: 768px) {
+    .find__cars-left {
+      padding-top: 20px;
+      padding-bottom: 0;
+      background: #fff;
+      text-align: center;
+    }
+  
+    .form {
+      padding: 20px 10px;
+    }
+  }
