added media queries

--- a/src/styles/services-list.css
+++ b/src/styles/services-list.css
@@ -12,4 +12,13 @@
   .service__item h6:hover {
     color: #f9a826;
   }
+
+  
+  /* media queries */
+
+  @media only screen and (max-width: 768px) {
+    .service__item h6 {
+      font-size: 1.1rem;
+    }
+  }
   
