--- a/src/styles/car-item.css
+++ b/src/styles/car-item.css
@@ -10,3 +10,24 @@
     color: #f9a826;
     font-size: 1.1rem;
   }
+
+  /* car button styling */
+
+
+  .car__item-btn {
+    border-radius: 0;
+    border: none;
+    outline: none;
+    background: #000d6b;
+    padding: 8px 0px;
+  }
+  
+  .car__item-btn a {
+    text-decoration: none;
+    color: #fff;
+    font-weight: 500;
+  }
+  
+  .car__item-btn a:hover {
+    color: #fff;
+  }
