--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -246,3 +246,19 @@
     display: block;
   }
 }
+
+
+
+/* scroll bar  */
+
+body::-webkit-scrollbar {
+  width: 8px;               /* width of the entire scrollbar */
+}
+
+
+
+body::-webkit-scrollbar-thumb {
+  background-color: blue;    /* color of the scroll thumb */
+  border-radius: 20px;       /* roundness of the scroll thumb */
+  border: 3px solid #fff;  /* creates padding around scroll thumb */
+}
