--- a/src/styles/contact.css
+++ b/src/styles/contact.css
@@ -1,3 +1,19 @@
+/* contact button */
+
+.contact__btn{
+    color: #fff;
+    background-color: #000d6b;
+    padding: 6px 8px;
+    border-radius: 15px;
+    border: none;
+    transition: all 0.3s;
+}
+.contact__btn:hover{
+    color: #000d6b;
+    background-color: #fff;
+    
+}
+
 .social__link-icon {
     text-decoration: none;
     color: #000d6b;
