--- a/src/styles/header.css
+++ b/src/styles/header.css
@@ -1,57 +1,52 @@
-/* header stying */
-
+/* Header Styling */
 
 .header__top {
-    padding: 10px 0px;
-    background: #000d6b;
-    color: #fff;
-  }
-  
-  .header__top__left {
-    display: flex;
-    align-items: center;
-    column-gap: 1rem;
-  }
-  
-  .header__top__left span {
-    font-size: 0.9rem;
-  }
-  
-  .header__top__help {
-    display: flex;
-    align-items: center;
-    column-gap: 0.4rem;
-    cursor: pointer;
-  }
-  
-  .header__top__help i {
-    background: #fff;
-    color: #000d6b;
-    padding: 2px 4px;
-    border-radius: 50px;
-    font-size: 0.7rem;
-  }
-  
-  .header__top__right a {
-    text-decoration: none;
-    color: #fff;
-    font-size: 0.9rem;
-  }
-  
-  .header__top__right a:hover {
-    color: #fff;
-  }
+  padding: 10px 0px;
+  background: #000d6b;
+  color: #fff;
+}
 
+.header__top__left {
+  display: flex;
+  align-items: center;
+  column-gap: 1rem;
+}
 
-  /*=========== header middle styling=========== */
+.header__top__left span {
+  font-size: 0.9rem;
+}
 
+.header__top__help {
+  display: flex;
+  align-items: center;
+  column-gap: 0.4rem;
+  cursor: pointer;
+}
 
-  /* header */
-  .header__middle {
-    padding: 20px 0px;
-  }
-  
-  /* logo */
+.header__top__help i {
+  background: #fff;
+  color: #000d6b;
+  padding: 2px 4px;
+  border-radius: 50px;
+  font-size: 0.7rem;
+}
+
+.header__top__right a {
+  text-decoration: none;
+  color: #fff;
+  font-size: 0.9rem;
+}
+
+.header__top__right a:hover {
+  color: #fff;
+}
+
+/* Header Middle Styling */
+
+.header__middle {
+  padding: 20px 0px;
+}
+
 .logo h1 a span {
   font-size: 1.5rem;
 }
@@ -70,8 +65,6 @@
   line-height: 1.5rem;
 }
 
-/* location */
-
 .header__location span i {
   font-size: 2.2rem;
   color: #000d6b;
@@ -86,9 +79,6 @@
 .header__location-content h6 {
   font-weight: 600;
 }
-
-
-/* header-btn */
 
 .header__btn {
   background: #000d6b !important;
@@ -112,15 +102,13 @@
   color: #fff;
 }
 
-
-/* ================ main navbar styles =========== */
+/* Main Navbar Styles */
 
 .main__navbar {
   padding: 15px 0px;
   background: #000d6b;
 }
 
-/* mobile menu (hamburger) */
 .mobile__menu i {
   color: #fff;
   font-size: 1.3rem;
@@ -147,8 +135,6 @@
   color: #f9a826;
 }
 
-/* search box */
-
 .search__box {
   border: 1px solid #7c8a972f;
   padding: 7px 12px;
@@ -169,35 +155,31 @@
 .search__box input::placeholder {
   font-size: 0.8rem;
 }
+
 .search__box span i {
   color: rgba(255, 255, 255, 0.555);
   cursor: pointer;
 }
 
-/* active element */
 .nav__active {
   color: #f9a826;
 }
 
-
-/*Responsive => max-width 768px */
+/* Responsive Styles */
 
 @media only screen and (max-width: 768px) {
+  /* Header */
   .header__top,
-  .header__middle
-  /* .nav__right */
-   {
+  .header__middle {
     display: none;
   }
 
-
   .mobile__menu {
     display: block;
-    transition: 0.4s;
   }
 
   .navigation {
-    background: rgb(0, 13, 107, 0.6);
+    background: rgba(0, 13, 107, 0.6);
     width: 100%;
     height: 100%;
     position: fixed;
@@ -208,57 +190,52 @@
   }
 
   .menu {
-    width: 200px; 
-    height: 70%; 
+    width: 200px;
+    height: 70%;
     background: #000d6b;
     color: #fff;
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    padding: 0.4rem; 
-    border-radius:0px 10px 10px 0px; 
-    position: fixed; 
+    padding: 0.4rem;
+    border-radius: 0px 10px 10px 0px;
+    position: fixed;
     top: 0;
     left: 0;
-    z-index: 1; 
-    transition: width 0.3s; 
-}
+    z-index: 1;
+    transition: width 0.3s;
+  }
 
-/* Add styles for the menu items */
-.menu-item {
+  /* Add styles for the menu items */
+  .menu-item {
     margin: 1rem auto;
-    color: #000d6b; 
+    color: #000d6b;
     text-align: center;
     text-decoration: none;
     font-size: 18px;
-}
+  }
 
-/* Define styles for hover effect on menu items */
-.menu-item:hover {
+  /* Define styles for hover effect on menu items */
+  .menu-item:hover {
     background: #f9a826;
     border-radius: 5px;
     transition: background 0.2s;
-}
-
+  }
 
   .menu__active {
     display: block;
   }
 }
 
-
-
-/* scroll bar  */
+/* Scroll Bar Styles */
 
 body::-webkit-scrollbar {
-  width: 8px;               /* width of the entire scrollbar */
+  width: 8px; /* width of the entire scrollbar */
 }
 
-
-
 body::-webkit-scrollbar-thumb {
-  background-color: blue;    /* color of the scroll thumb */
-  border-radius: 20px;       /* roundness of the scroll thumb */
-  border: 3px solid #fff;  /* creates padding around scroll thumb */
+  background-color: blue; /* color of the scroll thumb */
+  border-radius: 20px; /* roundness of the scroll thumb */
+  border: 3px solid #fff; /* creates padding around scroll thumb */
 }
